option java_package = "org.apache.hadoop.yarn.ipc";
option java_outer_classname = "RpcProtos";
option java_generate_equals_and_hash = true;

import "yarn_protos.proto";

message ProtoSpecificRpcRequest {
    required string method_name = 1;
    optional bytes request_proto = 2;
}

message ProtoSpecificRpcResponse {
    optional bytes response_proto = 1;

	optional bool is_error = 2;
	optional YarnRemoteExceptionProto exception = 3;
}
